--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -13,13 +13,15 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
+    "cordova-android": "^10.1.2",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-camera": "^6.0.0"
   },
   "cordova": {
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
